# simple_sorter

./: .gitignore
firmware_simple_sorter/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware_simple_sorter/main/: CMakeLists.txt  idf_component.yml  main.cc  tusb_config.h  usb_descriptors.c  usb_descriptors.h
firmware_simple_sorter/main/bsp/: board_api.cpp  board_api.h
firmware_simple_sorter/main/listener/: echo_message_processor.cc  echo_message_processor.hh  echo_namespace_listener.cc  echo_namespace_listener.hh  interfaces.hh  rgb_message_processor.cc  rgb_message_processor.hh  servo_message_processor.cc  servo_message_processor.hh
web_simple_sorter/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  upload.config.template.json  vite.config.ts
web_simple_sorter/scripts/: postbuild-singlefile-minify.ts  upload-scp.mjs
web_simple_sorter/src/: SorterMode.ts  app.ts  connect-panel.ts  rgb-color-wheel-panel.ts  rgb-color-wheel.ts  servo_test_panel.ts  sorter-panel.ts  styles.css  usb.ts  webusb.d.ts
